Mobile Automation Practice

--- a/pom.xml
+++ b/pom.xml
@@ -138,5 +138,12 @@
             <version>1.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.appium/java-client -->
+        <dependency>
+            <groupId>io.appium</groupId>
+            <artifactId>java-client</artifactId>
+            <version>7.0.0</version>
+        </dependency>
+
     </dependencies>
 </project>
